  their matching code file (and by no other file).
  Therefore: created some *_l.h files for prototypes of functions private
  to the library.
- crypt/ossl/nettransportssl.{c,h}: improved this module a lot. It can now at
  least be used for client connections.
- ssl module is now able to save certificates if demanded by the user


2004-05-05   Christian Stimming <stimming@tuhh.de>

	* src/*: Remove trailing semicolons from macro calls where
	"-pedantic" complains about them.
	
	* src/base/misc.h: Remove trailing semicolons from the function
	definitions in the GWEN_LIST_FUNCTIONS macro since ISO C89 does
	not allow these (-pedantic i.e. --enable-warnings=all will give
	warnings about that). Admittantly all modern compilers have no
	problems with them and ISO C99 allows these, but we never know
	whether our source code might get compiled with something
	different. In other words, since it doesn't hurt us to comply with
	the older standard, we try to do it here.

	* src/types.h.in: Add __extension__ specifier to "long long"
	definition in order to avoid warnings when compiling with
	gcc and "-pedantic".


2004/05/05: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed some bugs in args.c
- modified the prototype of GWEN_WaitCallback_Log
- fixed GWEN_TYPE_UINT64 for MSVC
- removed some trailing semicolons from macros in inherit.h and misc.h
- renamed DLL to gwenhywfar32_EFFECTIVE_SO_VERSION to imitate the very
  useful SO features of the GNU linker on windows
- started working on a NetTransport module for SSL connections
- removed sslconnection, it is now replaced by nettransportssl.
  This now fits into the network framework. As soon as this is better
  tested I will be able to release Gwenhywfar 1.0.


2004/05/04: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added type GWEN_TYPE_UINT64
- rewrote GWEN_WAITCALLBACK stuff (will have to modify some dependant